--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -612,7 +612,7 @@ section {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
-  font-family: "Poppins", sans-serif;
+  font-family: "lalezar" !important;
 }
 .section-title h2::after {
   content: "";
@@ -627,7 +627,7 @@ section {
   margin: 0;
   font-size: 36px;
   font-weight: 700;
-  font-family: "Playfair Display", serif;
+  font-family: "lalezar" !important;
   color: #cda45e;
 }
 
@@ -773,12 +773,17 @@ section {
   transition: all ease-in-out 0.3s;
   background: #1a1814;
   font-family: 'lalezar' !important;
+  text-align: center;
+}
+.why-us p,h2{
+  font-family: 'lalezar' !important;
 }
 .why-us .box span {
   display: block;
   font-size: 28px;
   font-weight: 700;
   color: #cda45e;
+  
 }
 .why-us .box h4 {
   font-size: 24px;
@@ -786,6 +791,8 @@ section {
   padding: 0;
   margin: 20px 0;
   color: rgba(255, 255, 255, 0.8);
+  
+  
 }
 .why-us .box p {
   color: #aaaaaa;
@@ -823,7 +830,7 @@ section {
   margin-bottom: 10px;
   transition: all ease-in-out 0.3s;
   border-radius: 50px;
-  font-family: "Playfair Display", serif;
+  font-family: "lalezar";
 }
 .menu #menu-flters li:hover, .menu #menu-flters li.filter-active {
   color: #cda45e;
@@ -837,11 +844,11 @@ section {
 .menu .menu-img {
   width: 70px;
   border-radius: 50%;
-  float: left;
+  float: right;
   border: 5px solid rgba(255, 255, 255, 0.2);
 }
 .menu .menu-content {
-  margin-left: 85px;
+  margin-right: 85px;
   overflow: hidden;
   display: flex;
   justify-content: space-between;
@@ -878,10 +885,10 @@ section {
   color: #cda45e;
 }
 .menu .menu-ingredients {
-  margin-left: 85px;
+  margin-right: 95px;
   font-style: italic;
   font-size: 14px;
-  font-family: "Poppins", sans-serif;
+  font-family: "lalezar", sans-serif;
   color: rgba(255, 255, 255, 0.5);
 }
 
@@ -1268,7 +1275,7 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  float: left;
+  float: right;
   width: 44px;
   height: 44px;
   background: #cda45e;
@@ -1279,14 +1286,14 @@ section {
   transition: all 0.3s ease-in-out;
 }
 .contact .info h4 {
-  padding: 0 0 0 60px;
+  padding: 0 60px 0 0;
   font-size: 18px;
   font-weight: 500;
   margin-bottom: 5px;
   font-family: "Poppins", sans-serif;
 }
 .contact .info p {
-  padding: 0 0 0 60px;
+  padding: 0 60px 0 0;
   margin-bottom: 0;
   font-size: 14px;
   color: #bab3a6;
@@ -1416,13 +1423,13 @@ section {
   line-height: 1;
   font-weight: 300;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: "lalezar", sans-serif;
 }
 #footer .footer-top .footer-info p {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Playfair Display", serif;
+  font-family: "lalezar", serif;
   color: #fff;
 }
 #footer .footer-top .social-links a {
