--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,10 +356,10 @@ h1, h2, h3, h4, h5, h6 {
   top: 55px;
   right: 15px;
   bottom: 15px;
-  left: 15px;
+  /* left: 15px; */
   padding: 10px 0;
   border-radius: 6px;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.568);
   overflow-y: auto;
   transition: 0.3s;
 }
