--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,11 @@ body {
   background: #0c0b09;
   color: #fff;
 }
+@media only screen and (max-width: 600px){
+  body{
+    text-align: center;
+  }
+}
 
 a {
   color: #cda45e;
@@ -412,6 +417,29 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   padding: 0;
 }
+
+@media screen and (max-width: 600px) {
+  #hero h1 {
+    text-align: center !important;
+  }
+  #hero h2 {
+    text-align: center !important;
+  }
+  #hero .btns {
+    text-align: center !important;
+  }
+}
+@media screen and (min-width: 600px) {
+  #hero h1 {
+    text-align: right !important;
+  }
+  #hero h2 {
+    text-align: right !important;
+  }
+  #hero .btns {
+    text-align: right !important;
+  }
+}
 #hero:before {
   content: "";
   background: rgba(0, 0, 0, 0.5);
@@ -434,7 +462,6 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  text-align: right !important;
   color: #fff;
   font-family: "Poppins", sans-serif;
 }
@@ -443,13 +470,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero h2 {
   color: #eee;
-  margin-bottom: 10px 0 0 0;
+  margin-bottom: 10px;
   font-size: 22px;
-  text-align: right !important;
 }
 #hero .btns {
   margin-top: 30px;
-  text-align: right !important;
 }
 #hero .btn-menu, #hero .btn-book {
   font-weight: 600;
@@ -1185,6 +1210,7 @@ section {
   overflow: hidden;
   border-right: 3px solid #454035;
   border-bottom: 3px solid #454035;
+  
 }
 .gallery .gallery-item img {
   transition: all ease-in-out 0.4s;
@@ -1192,6 +1218,24 @@ section {
 .gallery .gallery-item:hover img {
   transform: scale(1.1);
 }
+#res-gallery{
+  display: none;
+}
+@media only screen and (max-width: 600px) {
+  #gallery{
+    display: none;
+  }
+  #gallery-link{
+    display: none;
+  }
+  #res-gallery-link{
+    display: block;
+  }
+  #res-gallery{
+    display: block;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Chefs
@@ -1203,6 +1247,27 @@ section {
   position: relative;
   overflow: hidden;
 }
+#res-chefs{
+  display: none;
+}
+#chefs-link{
+  display: block;
+}
+@media only screen and (max-width: 600px) {
+  #chefs{
+    display: none;
+  }
+  #chefs-link{
+    display: none;
+  }
+  #res-chefs-link{
+    display: block;
+  }
+  #res-chefs{
+    display: block;
+  }
+}
+
 .chefs .member .member-info {
   opacity: 0;
   position: absolute;
@@ -1412,6 +1477,11 @@ section {
   border-top: 1px solid #37332a;
   border-bottom: 1px solid #28251f;
   padding: 60px 0 30px 0;
+}
+@media screen and (max-width: 600px) {
+  #footer li{
+    justify-content: center;
+  }
 }
 #footer .footer-top .footer-info {
   margin-bottom: 30px;
